kubernetes/.archive/aria2-ui/app/deployment.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/deployment.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name aria2-ui
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: *name
  template:
    metadata:
      name: *name
    spec:
      containers:
        - name: *name
          image: wahyd4/aria2-ui:6.2.2
          ports:
            - name: main
              containerPort: 80
            - name: rclone
              containerPort: 5572
            - name: filebrowser
              containerPort: 8080
            - name: rpc
              containerPort: 6800
          volumeMounts:
            - name: *conf
              mountPath: /app/conf/
            - name: &data data
              mountPath: /data/
            - name: *database
              mountPath: /app/filebrowser.db
              subPath: filebrowser.db
            - name: &cache cache
              mountPath: /app/.cache
      volumes:
        - name: *conf-ro
          secret:
            secretName: aria2-ui-config
            optional: false
        - name: *conf
          emptyDir: {}
        - name: *data
          persistentVolumeClaim:
            claimName: aria2-ui-data
        - name: *database
          persistentVolumeClaim:
            claimName: aria2-ui-database
        - name: *cache
          persistentVolumeClaim:
            claimName: aria2-ui-cache
