kubernetes/.archive/aria2-ui/app/default.http-route.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: aria2-ui-http
spec:
  parentRefs:
    - name: default
      sectionName: http-wildcard
      namespace: gateway-api
  hostnames:
    - aria2-ui.${IDVN_DOMAIN}
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: aria2-ui-https
spec:
  parentRefs:
    - name: default
      sectionName: https-wildcard
      namespace: gateway-api
  hostnames:
    - aria2-ui.${IDVN_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: aria2-ui
          port: 80
# ---
# # yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: aria2-ui-https
# spec:
#   parentRefs:
#     - name: default
#       sectionName: https-wildcard
#       namespace: gateway-api
#   hostnames:
#     - aria2-ui.${IDVN_DOMAIN}
#   rules:
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /ui
#       filters:
#         - type: RequestRedirect
#           requestRedirect:
#             path:
#               type: ReplaceFullPath
#               replaceFullPath: /
#             statusCode: 301
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /rpc
#       backendRefs:
#         - name: &name aria2-ui
#           port: 6800
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /jsonrpc
#       backendRefs:
#         - name: *name
#           port: 6800
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /rclone
#       filters:
#         - type: URLRewrite
#           urlRewrite:
#             path:
#               type: ReplacePrefixMatch
#               replacePrefixMatch: /
#       backendRefs:
#         - name: *name
#           port: 5572
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /files
#       filters:
#         - type: URLRewrite
#           urlRewrite:
#             path:
#               type: ReplacePrefixMatch
#               replacePrefixMatch: /
#       backendRefs:
#         - name: *name
#           port: 8080
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /ro
#       filters:
#         - type: URLRewrite
#           urlRewrite:
#             path:
#               type: ReplacePrefixMatch
#               replacePrefixMatch: /
#       backendRefs:
#         - name: *name
#           port: 80
